made something that looks like a piano

--- a/index.html
+++ b/index.html
@@ -11,7 +11,44 @@
 
 	<body>
 		<div class="main-div">
+			<button>Generate New</button>
+			<textarea readonly style="resize: none">yooooo holy moly</textarea>
 			<p id="thing">Hello i am thing</p>
+
+			<div class="piano">
+
+				<div class="piano-top">
+					<div class="key-top-white-large"></div>
+					<div class="key-top-black"></div>
+					<div class="key-top-white-small"></div>
+					<div class="key-top-black"></div>
+					<div class="key-top-white-large"></div>
+					<div class="key-top-white-large"></div>
+					<div class="key-top-black"></div>
+					<div class="key-top-white-small"></div>
+					<div class="key-top-black"></div>
+					<div class="key-top-white-small"></div>
+					<div class="key-top-black"></div>
+					<div class="key-top-white-large"></div>
+				</div>
+				
+				<div class="piano-bottom">
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+				</div>
+
+				<!-- <p>Ahhehefhaje</p>
+
+				<div class="test1">
+					<div class="test2"></div>
+				</div> -->
+
+			</div>
 		</div>
 	</body>
 
