got some better keys

--- a/index.html
+++ b/index.html
@@ -13,40 +13,23 @@
 		<div class="main-div">
 			<button>Generate New</button>
 			<textarea readonly style="resize: none">yooooo holy moly</textarea>
-			<p id="thing">Hello i am thing</p>
 
 			<div class="piano">
 
 				<div class="piano-top">
-					<div class="key-top-white-large"></div>
-					<div class="key-top-black"></div>
-					<div class="key-top-white-small"></div>
-					<div class="key-top-black"></div>
-					<div class="key-top-white-large"></div>
-					<div class="key-top-white-large"></div>
-					<div class="key-top-black"></div>
-					<div class="key-top-white-small"></div>
-					<div class="key-top-black"></div>
-					<div class="key-top-white-small"></div>
-					<div class="key-top-black"></div>
-					<div class="key-top-white-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top" id="key-Db0"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top" id="key-Eb0"></div>
 				</div>
 				
 				<div class="piano-bottom">
-					<div class="key-bottom"></div>
-					<div class="key-bottom"></div>
-					<div class="key-bottom"></div>
-					<div class="key-bottom"></div>
-					<div class="key-bottom"></div>
-					<div class="key-bottom"></div>
-					<div class="key-bottom"></div>
+					<div class="key-bottom" id="key-C0"></div>
+					<div class="key-bottom" id="key-D0"></div>
+					<div class="key-bottom" id="key-E0"></div>
 				</div>
 
-				<!-- <p>Ahhehefhaje</p>
-
-				<div class="test1">
-					<div class="test2"></div>
-				</div> -->
+				<div id="key-highlight-color"></div>
 
 			</div>
 		</div>
