started parsing midi input

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 					<div class="key-bottom" id="key-E0"></div>
 				</div>
 
-				<div id="key-highlight-color"></div>
+				<div class="key-highlight-color"></div>
+				<div class="key-correct-color"></div>
+				<div class="key-incorrect-color"></div>
 
 			</div>
 		</div>
