got a full octave to respond to midi input

--- a/index.html
+++ b/index.html
@@ -21,12 +21,43 @@
 					<div class="key-top" id="key-Db0"></div>
 					<div class="key-top-space-small"></div>
 					<div class="key-top" id="key-Eb0"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top" id="key-Gb0"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top" id="key-Ab0"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top" id="key-Bb0"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top" id="key-Db1"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top" id="key-Eb2"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top" id="key-Gb3"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top" id="key-Ab4"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top" id="key-Bb5"></div>
+					<div class="key-top-space-large"></div>
 				</div>
 				
 				<div class="piano-bottom">
 					<div class="key-bottom" id="key-C0"></div>
 					<div class="key-bottom" id="key-D0"></div>
 					<div class="key-bottom" id="key-E0"></div>
+					<div class="key-bottom" id="key-F0"></div>
+					<div class="key-bottom" id="key-G0"></div>
+					<div class="key-bottom" id="key-A0"></div>
+					<div class="key-bottom" id="key-B0"></div>
+					<div class="key-bottom" id="key-C1"></div>
+					<div class="key-bottom" id="key-D1"></div>
+					<div class="key-bottom" id="key-E1"></div>
+					<div class="key-bottom" id="key-F1"></div>
+					<div class="key-bottom" id="key-G1"></div>
+					<div class="key-bottom" id="key-A1"></div>
+					<div class="key-bottom" id="key-B1"></div>
 				</div>
 
 				<div class="key-highlight-color"></div>
