made 4 octaves total

--- a/index.html
+++ b/index.html
@@ -41,9 +41,47 @@
 					<div class="key-top-space-small"></div>
 					<div class="key-top"></div>
 					<div class="key-top-space-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top-space-large"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-small"></div>
+					<div class="key-top"></div>
+					<div class="key-top-space-large"></div>
 				</div>
 				
 				<div class="piano-bottom" id="piano-bottom-elem">
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
+					<div class="key-bottom"></div>
 					<div class="key-bottom"></div>
 					<div class="key-bottom"></div>
 					<div class="key-bottom"></div>
