started working on the button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 	<body>
 		<div class="main-div">
-			<button>Generate New</button>
-			<textarea readonly style="resize: none">yooooo holy moly</textarea>
+			<button onclick="generateRandomChord()">Generate New</button>
+			<textarea readonly style="resize: none" id="chord-textarea">yooooo holy moly</textarea>
 
 			<div class="piano">
 
