made all the chord types

--- a/index.html
+++ b/index.html
@@ -15,13 +15,43 @@
 				<button onclick="generateRandomChord()">Generate New</button>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="3" value="1" id="slider-major" name="slider-major">
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-major" name="slider-major">
 					Major
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="3" value="1" id="slider-minor" name="slider-minor">
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-minor" name="slider-minor">
 					Minor
+				</label>
+
+				<label>
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-diminished" name="slider-diminished">
+					Diminished
+				</label>
+
+				<label>
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-major7" name="slider-major7">
+					Major Seven
+				</label>
+
+				<label>
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-dominant7" name="slider-dominant7">
+					Dominant Seven
+				</label>
+
+				<label>
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-minor7" name="slider-minor7">
+					Minor Seven
+				</label>
+
+				<label>
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-half-diminished7" name="slider-half-diminished7">
+					Half Diminished Seven
+				</label>
+
+				<label>
+					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-diminished7" name="slider-diminished7">
+					Diminished Seven
 				</label>
 			</div>
 
