--- a/index.html
+++ b/index.html
@@ -15,47 +15,47 @@
 				<button onclick="generateRandomChord()">Generate New</button>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-major" name="slider-major">
+					<input type="range" class="slider-input" min="0" max="10" value="10" id="slider-major" name="slider-major">
 					Major
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-minor" name="slider-minor">
+					<input type="range" class="slider-input" min="0" max="10" value="6" id="slider-minor" name="slider-minor">
 					Minor
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-diminished" name="slider-diminished">
+					<input type="range" class="slider-input" min="0" max="10" value="1" id="slider-diminished" name="slider-diminished">
 					Diminished
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-major7" name="slider-major7">
+					<input type="range" class="slider-input" min="0" max="10" value="2" id="slider-major7" name="slider-major7">
 					Major Seven
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-dominant7" name="slider-dominant7">
+					<input type="range" class="slider-input" min="0" max="10" value="2" id="slider-dominant7" name="slider-dominant7">
 					Dominant Seven
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-minor7" name="slider-minor7">
+					<input type="range" class="slider-input" min="0" max="10" value="2" id="slider-minor7" name="slider-minor7">
 					Minor Seven
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-half-diminished7" name="slider-half-diminished7">
+					<input type="range" class="slider-input" min="0" max="10" value="1" id="slider-half-diminished7" name="slider-half-diminished7">
 					Half Diminished Seven
 				</label>
 
 				<label>
-					<input type="range" class="slider-input" min="0" max="6" value="1" id="slider-diminished7" name="slider-diminished7">
+					<input type="range" class="slider-input" min="0" max="10" value="1" id="slider-diminished7" name="slider-diminished7">
 					Diminished Seven
 				</label>
 			</div>
 
-			<textarea readonly style="resize: none" id="chord-textarea">yooooo holy moly</textarea>
+			<textarea readonly style="resize: none" id="chord-textarea">---</textarea>
 
 			<div class="piano">
 
