added a checkbox that enables the pedal for generating chords

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 	<body>
 		<div class="main-div">
 			<div class="generate-button-and-settings">
+
 				<button onclick="generateRandomChord()">Generate New</button>
+
+				<label>
+					<input type="checkbox" id="pedal-checkbox" name="pedal-checkbox" checked>
+					Use pedal to generate new chord
+				</label>
 
 				<label>
 					<input type="range" class="slider-input" min="0" max="32" value="28" id="slider-major" name="slider-major">
